# som-tsp

./: .gitignore  Cargo.toml  LICENSE  README.org  requirements.txt  setup.cfg
assets/: ch34.tsp  fi10639.tsp  it16862.tsp  qa194.tsp  uy734.tsp
report/: report.org  slides.org
src/: distance.py  distances.rs  io.rs  io_helper.py  main.py  main.rs  neuron.py  plot.py  types.rs
