[metadata]
name = som-tsp
version = 0.1.0
description = som-tsp
long_description = file: README.org
long_description_content_type = text/plain
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    matplotlib
    pandas
    numpy
python_requires = >=3.7


[options.entry_points]
console_scripts =
    som-tsp = src.main:main
